# kagc

./: Makefile  Makefile.am  Makefile.in  PURPOSE  README.md  config.status  configure  configure.ac  kagc  kagc.sublime-workspace
autom4te.cache/: output.1  requests  traces.2
doc/: API  MODULARISATION  PURPOSE  VHLD_TEXT  kagc.sublime-project  kagc.sublime-workspace
include/: gui.h  menu.h  worksheet.h
include/gui/: gui.h  worksheet.h
src/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  gui.ui  kagc  main.c
src/autom4te.cache/: output.1  requests
src/gui/: gui.h  menu.h  statusbar.h
src/loadable_modules/: module.c  module.h
src/parser/: parser.c  parser.h
